@@ -254,28 +254,28 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 	init_result(result);
 
 	strscpy(key, item->key);
-	if((p=strstr(key,"(")) != NULL)
+	if((p=strchr(key,'[')) != NULL)
 	{
 		*p=0;
 		strscpy(function_grp,key);
-		*p='(';
+		*p='[';
 		p++;
 	}
 	else	ret = NOTSUPPORTED;
 
 	if(ret == SUCCEED)
 	{
-		if((p2=strstr(p,"'")) != NULL)
+		if((p2=strchr(p,'"')) != NULL)
 		{
 			p2++;
 		}
 		else	ret = NOTSUPPORTED;
 
-		if((ret == SUCCEED) && (p=strstr(p2,"'")) != NULL)
+		if((ret == SUCCEED) && (p=strchr(p2,'"')) != NULL)
 		{
 			*p=0;
 			strscpy(group,p2);
-			*p='\'';
+			*p='"';
 			p++;
 		}
 		else	ret = NOTSUPPORTED;
@@ -285,17 +285,17 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 
 	if(ret == SUCCEED)
 	{
-		if((p2=strstr(p,"'")) != NULL)
+		if((p2=strchr(p,'"')) != NULL)
 		{
 			p2++;
 		}
 		else	ret = NOTSUPPORTED;
 
-		if((ret == SUCCEED) && (p=strstr(p2,"'")) != NULL)
+		if((ret == SUCCEED) && (p=strchr(p2,'"')) != NULL)
 		{
 			*p=0;
 			strscpy(itemkey,p2);
-			*p='\'';
+			*p='"';
 			p++;
 		}
 		else	ret = NOTSUPPORTED;
@@ -305,17 +305,17 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 
 	if(ret == SUCCEED)
 	{
-		if((p2=strstr(p,"'")) != NULL)
+		if((p2=strchr(p,'"')) != NULL)
 		{
 			p2++;
 		}
 		else	ret = NOTSUPPORTED;
 
-		if((ret == SUCCEED) && (p=strstr(p2,"'")) != NULL)
+		if((ret == SUCCEED) && (p=strchr(p2,'"')) != NULL)
 		{
 			*p=0;
 			strscpy(function_item,p2);
-			*p='\'';
+			*p='"';
 			p++;
 		}
 		else	ret = NOTSUPPORTED;
@@ -325,17 +325,17 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 
 	if(ret == SUCCEED)
 	{
-		if((p2=strstr(p,"'")) != NULL)
+		if((p2=strchr(p,'"')) != NULL)
 		{
 			p2++;
 		}
 		else	ret = NOTSUPPORTED;
 
-		if((ret == SUCCEED) && (p=strstr(p2,"'")) != NULL)
+		if((ret == SUCCEED) && (p=strchr(p2,'"')) != NULL)
 		{
 			*p=0;
 			strscpy(parameter,p2);
-			*p='\'';
+			*p='"';
 			p++;
 		}
 		else	ret = NOTSUPPORTED;
